# haskell-nix-cookiecutter

./: .travis.yml  README.md  config.yaml  cookiecutter.json
.github/workflows/: test.yml
ci/: cookiecutter-config.yml
hooks/: post_gen_project.sh
{{cookiecutter.package_name}}/: .envrc  CHANGELOG.md  LICENSE  Makefile  README.md  default.nix  {{cookiecutter.package_name}}.cabal
{{cookiecutter.package_name}}/docs/: docs.md  index.html
{{cookiecutter.package_name}}/nix/: overrides.nix  sources.json
