cabal-version: 2.2

name:           {{cookiecutter.package_name}}
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/{{cookiecutter.git_username}}/{{cookiecutter.git_repo_name}}#readme>
homepage:       https://github.com/{{cookiecutter.git_username}}/{{cookiecutter.git_repo_name}}#readme
bug-reports:    https://github.com/{{cookiecutter.git_username}}/{{cookiecutter.git_repo_name}}/issues
author:         {{cookiecutter.author_name}}
maintainer:     {{cookiecutter.author_email}}
copyright:      2020 {{cookiecutter.author_name}}
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/{{cookiecutter.git_username}}/{{cookiecutter.git_repo_name}}

library
  exposed-modules:
  other-modules:
      Paths_{{cookiecutter.package_name}}
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable {{cookiecutter.package_name}}-exe
  main-is: Main.hs
  other-modules:
      Paths_{{cookiecutter.package_name}}
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , {{cookiecutter.package_name}}
  default-language: Haskell2010

test-suite {{cookiecutter.package_name}}-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_{{cookiecutter.package_name}}
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , {{cookiecutter.package_name}}
  default-language: Haskell2010

test-suite readme-test
  type: exitcode-stdio-1.0
  main-is: README.lhs
  ghc-options:
      -Wall
      -Wno-unticked-promoted-constructors
      -threaded
      -Wall
      -fno-warn-incomplete-patterns
      -fno-warn-missing-signatures
      -fno-warn-name-shadowing
      -fno-warn-type-defaults
      -fno-warn-unused-top-binds
      -pgmL markdown-unlit
  build-depends:
      base >=4.7 && <5
    , {{cookiecutter.package_name}}
  build-tool-depends: markdown-unlit:markdown-unlit
  default-language: Haskell2010
