cabal-version: 2.2

name:         {{cookiecutter.package_name}}
version:      0.1.0.0
{%- if cookiecutter.git_username != '' and cookiecutter.git_repo_name != '' %}
description:  Please see the README on GitHub at <https://github.com/{{cookiecutter.git_username}}/{{cookiecutter.git_repo_name}}#readme>
homepage:     https://github.com/{{cookiecutter.git_username}}/{{cookiecutter.git_repo_name}}#readme
bug-reports:  https://github.com/{{cookiecutter.git_username}}/{{cookiecutter.git_repo_name}}/issues
{%- endif %}
{%- if cookiecutter.author_email != '' %}
maintainer:   {{cookiecutter.author_email}}
{%- endif %}
{%- if cookiecutter.author_name != '' %}
author:       {{cookiecutter.author_name}}
copyright:    2020 {{cookiecutter.author_name}}
{%- endif %}
license:      BSD-3-Clause
license-file: LICENSE
build-type:   Simple

extra-source-files:
    README.md
    CHANGELOG.md

{% if cookiecutter.git_username != '' and cookiecutter.git_repo_name != '' -%}
source-repository head
  type: git
  location: https://github.com/{{cookiecutter.git_username}}/{{cookiecutter.git_repo_name}}
{%- endif %}

library
  exposed-modules:
  other-modules:
      Paths_{{cookiecutter.package_name|replace('-', '_')}}
  hs-source-dirs:
      src
  ghc-options:
      -Wall -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , mtl
  default-language: Haskell2010

executable {{cookiecutter.package_name}}-exe
  main-is: Main.hs
  other-modules:
      Paths_{{cookiecutter.package_name|replace('-', '_')}}
  hs-source-dirs:
      app
  ghc-options:
      -Wall -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , {{cookiecutter.package_name}}
  default-language: Haskell2010

test-suite {{cookiecutter.package_name}}-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_{{cookiecutter.package_name|replace('-', '_')}}
  hs-source-dirs:
      test
  ghc-options:
      -Wall -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , {{cookiecutter.package_name}}
  default-language: Haskell2010

test-suite docs-test
  type: exitcode-stdio-1.0
  hs-source-dirs: docs
  main-is: docs.lhs
  ghc-options:
      -Wall
      -Wredundant-constraints
      -Wno-unticked-promoted-constructors
      -threaded
      -Wall
      -fno-warn-incomplete-patterns
      -fno-warn-missing-signatures
      -fno-warn-name-shadowing
      -fno-warn-type-defaults
      -fno-warn-unused-top-binds
      -pgmL markdown-unlit
  build-depends:
      base >=4.7 && <5
    , {{cookiecutter.package_name}}
  build-tool-depends: markdown-unlit:markdown-unlit
  default-language: Haskell2010
